--- a/src/Application.Packaging/Targets/Android.targets
+++ b/src/Application.Packaging/Targets/Android.targets
@@ -13,7 +13,7 @@
 	</Target>
 
 	<Target Name="_UpdatePackageId"
-			BeforeTargets="BeforeBuild"
+			BeforeTargets="StartAndroidActivity"
 			Condition="'$(AndroidApplication)' == 'true' and '$(ApplicationIdentifier)' != ''">
 
 		<PropertyGroup>
