--- a/src/Application.Versioning/Targets/iOS.targets
+++ b/src/Application.Versioning/Targets/iOS.targets
@@ -1,6 +1,6 @@
 <Project>
 	<Target Name="_SetApplicationVersion"
-			BeforeTargets="_DetectAppManifest"
+			AfterTargets="_DetectAppManifest"
 			DependsOnTargets="_CalculateApplicationVersion"
 			Condition="'$(BuildingInsideVisualStudio)'=='' and '$(ApplicationVersion)'!=''">
 		<PropertyGroup>
