App Id is now updated in json for Android

--- a/src/Application.Packaging/Targets/Android.targets
+++ b/src/Application.Packaging/Targets/Android.targets
@@ -49,6 +49,7 @@
 		<ItemGroup>
 			<_CsharpFiles Include="..\**\*.cs" />
 			<_XmlFiles Include="..\**\*.xml" />
+			<_JsonFiles Include="..\**\*.json" />
 		</ItemGroup>
 
 		<Message Text="Changing Android package identifier from '$(_CurrentApplicationIdentifier)' to '$(ApplicationIdentifier)'"
@@ -62,6 +63,12 @@
 					Condition="$(_ShouldReplaceApplicationIdentifier)"/>
 
 		<FileUpdate Files="@(_XmlFiles)"
+					Regex="$(_CurrentApplicationIdentifier)"
+					ReplacementText="$(ApplicationIdentifier)"
+					IgnoreCase="True"
+					Condition="$(_ShouldReplaceApplicationIdentifier)"/>
+
+		<FileUpdate Files="@(_JsonFiles)"
 					Regex="$(_CurrentApplicationIdentifier)"
 					ReplacementText="$(ApplicationIdentifier)"
 					IgnoreCase="True"
