--- a/src/Application.Packaging/Application.Packaging.csproj
+++ b/src/Application.Packaging/Application.Packaging.csproj
@@ -25,8 +25,8 @@
 		<None Include="Props\UAP.props" Pack="true" PackagePath="@(_UapTargetFrameworks->'build/%(Identity)/Packaging.props')" />
 		<None Include="Targets\UAP.targets" Pack="true" PackagePath="@(_UapTargetFrameworks->'build/%(Identity)/Packaging.targets')" />
 
-		<!-- Include WASM targets for the specified NetStandard target frameworks -->
-		<None Include="Targets\WASM.targets" Pack="true" PackagePath="@(_NetStandardTargetFrameworks->'build/%(Identity)/Packaging.targets')" />
+		<!-- Include ReferenceAPI targets for the specified NetStandard target frameworks -->
+		<None Include="Targets\ReferenceAPI.targets" Pack="true" PackagePath="@(_NetStandardTargetFrameworks->'build/%(Identity)/Packaging.targets')" />
 	</ItemGroup>
 
 	<ItemGroup>
