--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,16 @@ stages:
       value: $(Build.ArtifactStagingDirectory)
 
     steps:
-    - task: GitVersion@5
+    - task: gitversion/setup@0
       inputs:
-        runtime: 'core'
+        versionSpec: '5.X'
+      displayName: 'Install GitVersion'
+
+    - task: gitversion/execute@0
+      inputs:
+        useConfigFile: true
         configFilePath: 'gitversion.yml'
+      displayName: 'Calculate version'
 
     - task: NuGetToolInstaller@1
       inputs:
