--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,7 @@ queue_rules:
   - name: default
     conditions:
       # Conditions to get out of the queue (= merged)
-      - check-success=nventive.Nimue
+      - check-success=nventive.MSBuild.UnifiedExtensions
 
 pull_request_rules:
 
@@ -12,7 +12,7 @@ pull_request_rules:
       - base=develop
 
       # All Azure builds should be green:
-      - status-success=Uno.UI - CI
+      - status-success=nventive.MSBuild.UnifiedExtensions
 
       # CLA check must pass:
       #- "status-success=license/cla"
